# etl_rag_demo

./: .gitignore  Dockerfile  app.py  chainlit.md  fly.toml  full_energy_technology_list.json  pyproject.toml
.chainlit/: config.toml
.chainlit/translations/: en-US.json
.files/1716de44-5ace-4d72-8158-0202e53e16f0/: 35f5b968-d786-481d-972d-06ff15b1e224.txt  51d20e11-a567-4a86-992b-9ffe86668af4.txt
.files/70e11f7f-927e-480d-a5a0-c801f60eb682/: 24801f5d-f630-472c-a403-2cb679a99c3f.txt  47c94060-b6b8-401d-916c-92f0496949af.txt  4fe9fec0-9325-4bc1-9fb5-69269de91a10.txt  7aca8b71-d4c9-4be1-ab54-a5e979177b88.txt
.files/7649e3ca-8e0f-4624-b028-4847bd37412a/: 4dcab4ae-9735-4d5c-984e-05a0846d9e26.txt
.files/9a08b1ee-9c58-4001-a747-c1b0d1e1cd91/: 1b23821e-f182-43bb-abc8-b7aa079ee9b6.txt  d61b8d0f-1b49-4d98-baa0-b7e2415a9898.txt  d7ab25e8-5dd3-4b18-b484-cde670266ccc.txt  f3fbe7bd-eec4-4270-a27a-10db28da2abe.txt
.files/b410697e-0472-4b56-93f4-218df57d6786/: 0e37c290-ccd8-4443-b089-344895b34305.txt  2d3604b0-06e8-4bd9-be98-9943f9962a96.txt  840bfd12-4650-4c83-b4fb-a917427ec557.txt  b94d12c6-6a10-4551-a877-5c1d3a4197d6.txt
public/: logo_dark_2lines_new.psd  main_etl_style.css  main_etl_style_full.css
