[tool.poetry]
name = "rag-demo"
version = "0.1.0"
description = ""
authors = ["TomBers <tjcberman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
chainlit = "^1.0.401"
langchain = "^0.1.11"
pinecone-client = "^3.1.0"
langchain-community = "^0.0.27"
openai = "^1.13.3"
langchain-openai = "^0.0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
